Try to build JDK7 compatible stuff with JDK8